test_files/s_cproc/macro_define/test_030/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_030/i.input:1:17: error: duplicate macro parameter "arg..."
 #define VA(arg, arg...) __VA_ARGS__
                 ^
